# NotifyaGarden

./: .gitignore  README.md  build.gradle.kts  key  kls_database.db  settings.gradle.kts
NotifyaGarden-backend/: Cargo.toml  Dockerfile  README.md
NotifyaGarden-backend/src/: game.rs  main.rs  message.rs  oauth2.rs  restapi.rs
app/: build.gradle.kts  kls_database.db
app/release/: app-release.apk  output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/strling/notifyagarden/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/strling/notifyagarden/: GameItemsSerializer.kt  GrowAGarden.kt  GrowAGardenAPI.kt  GrowAGardenTimerViewModel.kt  ItemsList.kt  MainActivity.kt  NotificationApp.kt  NotificationMessagingService.kt  NotificationService.kt  NotifyAlarmManager.kt  NotifyBroadcast.kt  NotifyData.kt  NotifyDataStore.kt  OneUIDropdown.kt  TimerData.kt  TimerViewModel.kt
app/src/main/proto/: GameItems.proto
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome_foreground.xml
app/src/main/res/drawable-anydpi/: ic_notification.xml
app/src/main/res/values/: ic_launcher_background.xml  ic_launcher_monochrome_background.xml  strings.xml  themes.xml
app/src/main/res/values-v31/: themes.xml
app/src/test/java/com/strling/notifyagarden/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
remote-config/: preprocessor.py  update.json
(+3 files in other folders)
