[package]
name = "notifyagarden"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-util = "0.3.31"
http = "1.3.1"
jsonwebtoken = "9.3.1"
reqwest = "0.12.22"
serde = {version="1.0.219", features=["derive"]}
serde_json = "1.0.141"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
